--- a/{{cookiecutter.project_slug}}/app.json
+++ b/{{cookiecutter.project_slug}}/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "rn-expo-scaffold",
-    "slug": "rn-expo-scaffold",
+    "name": "{{cookiecutter.project_slug}}",
+    "slug": "{{cookiecutter.project_slug}}",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
